# gunray

./: .gitignore  ARCHITECTURE.md  CITATIONS.md  CLAUDE.md  README.md  out  pyproject.toml
examples/: README.md  access_control_break_glass.py  clinical_drug_safety.py  config_precedence.py  data_fusion_sources.py  explanations_gallery.py  gdpr_lawful_basis.py  git_ancestry.py  innocent_until_proven_guilty.py  klm_config_defaults.py  looks_red_under_red_light.py  mermaid_gallery.py  nixon_diamond.py  platypus.py  reviewer_assignment.py  safe_vs_nemo.py
notes/: b1_adversary_progress.md  b1_analyst_progress.md  b1_defeat_and_tree.md  b1_disagreement_build_arguments.md  b1_pyright_cleanup.md  b1_render_and_answer.md  b1_scout_progress.md  b1_wire_evaluator.md  b1_yellow_cleanup.md  b2_3_policy_routing.md  b2_adversary.md  b2_composite_fix_working.md  b2_defeater_participation.md  b2_scout_policy.md  b2_specificity.md  b2_superiority_preference.md  b3_docs_and_cleanup.md  b3_propstore_update.md  b3_scout_propstore.md  b_datalog_engine_review.md  b_surface_a_core_review.md  b_surface_e_tests_review.md  code_review_2026-04-16.md  cptrload_timeout_analysis.md  defeasible_conformance.md  f_c_mermaid.md  indexing_analysis.md  p0_adapter_typeerror_fix.md  parser_tokenizer_workstream.md  policy_propagating_fate.md  readme_rewrite.md  readme_update_2026-04-16.md  refactor_baseline.md  refactor_complete.md  refactor_progress.md  surface_d_io_and_api_review.md  what_sucks_review.md
reports/: E2-legal.md  E4-medical-perception.md  E5-data-config.md  E6-explanations-gallery.md  E7-engine-breadth.md  F-C-mermaid.md  b1-adversary.md  b1-analyst.md  b1-defeat-and-tree.md  b1-disagreement-and-build-arguments.md  b1-pyright-cleanup.md  b1-render-and-answer.md  b1-scorch-and-foundations.md  b1-scout.md  b1-wire-evaluator-and-nests-fix.md  b1-yellow-cleanup.md  b2-adversary.md  b2-composite-fix-and-close.md  b2-defeater-participation.md  b2-policy-routing-and-full-green.md  b2-scout-policy.md  b2-specificity.md  b2-superiority-preference.md  b2-verify-arguments-nameerror.md  b3-close.md  b3-propstore-update.md  (+4 more)
(+86 files in other folders)
