[project]
name = "gunray"
version = "0.1.0"
description = "Defeasible Datalog evaluator with stratified negation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
]

[project.optional-dependencies]
dev = [
    "datalog-conformance @ git+https://github.com/ctoth/datalog-conformance-suite",
    "hypothesis>=6.0",
    "pyright>=1.1.0",
    "pytest>=8.0",
    "pytest-timeout>=2.3.1",
    "ruff>=0.11.0",
    "vulture>=2.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gunray"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
timeout = 30
timeout_method = "thread"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["src"]
reportMissingImports = "none"
reportPrivateUsage = "none"
reportUnnecessaryIsInstance = "none"
reportUnusedFunction = "none"
